welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:1: error: Missing closing brace `}' assumed here
def diff21(n:Int): Int = {
^